crates/apps/jackin-capsule/src/tui/components/dialog/tests/snapshots/jackin_capsule__tui__components__dialog__tests__case_05__usage_dialog_kimi_provider_100x30.snap
---
source: crates/apps/jackin-capsule/src/tui/components/dialog/tests/case_05.rs
assertion_line: 184
expression: "render_usage_dialog_snapshot_for_view(100, 30, UsageDialogTab::Provider,\nkimi_usage_view_fixture())"
---



       ┌ Usage ─────────────────────────────────────────────────────────────────────────────┐
       │         Overview   OpenAI   Anthropic   Amp   xAI   Z.AI   Kimi   MiniMax          │
       │                                                           ──────                   │
       │────────────────────────────────────────────────────────────────────────────────────│
       │  Kimi                                                           account@work.test  │
       │  Updated 4m ago                                                                    │
       │────────────────────────────────────────────────────────────────────────────────────│
       │  Weekly                                                                            │
       │  ████████████████████████████████████████████████████████████████████████████████  │
       │  100% left                                                  Resets Jul 1 at 15:17  │
       │                                                                                    │
       │  Rate Limit                                                                        │
       │  ████████████████████████████████████████████████████████████████████████████████  │
       │  100% left                                                           Resets 17:17  │
       │  86% in reserve                                                 Lasts until reset  │
       │                                                                                    │
       └────────────────────────────────────────────────────────────────────────────────────┘
